# open-source-polarion-system-test-repo-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Jenkinsfile  README.md  pyproject.toml  renovate.json  sonar-project.properties  tox.ini  zizmor.yml
.github/workflows/: ci.yml  system-tests.yml
test-data/project-template/: README.md
test-data/project-template/example/.polarion/: polarion-project.xml
tests/: constants.py  extension_test_case.py  run.py  test_example_project.py  test_version.py
